--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,19 @@
   <groupId>com.example</groupId>
   <artifactId>my-new-project</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <version>1.0-SNAPSHOT</version>
   <name>my-new-project</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -20,5 +32,11 @@
       <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 </project>
